# NeighborlyPolyhedra

./: .gitignore  CMakeLists.txt  Launch.bat  NeighborlyPolyhedra  PrintData.bat  README.md  Szilassi.vcxproj  Szilassi.vcxproj.filters  cpu_features.h  main.cpp  memory_pool.h  plane.h  print_data.py  simd_util.cpp  simd_util.h  solver.cpp  solver.h  topologies.txt  util.cpp  util.h
Razor37/: m37_printable.stl
Razorcross/: m42_edge_graph.dot  m42_printable_magnets_half1.stl  m42_printable_magnets_half2.stl
